deployment/kubernetes/flat_template.yaml
---
# https://cloud.google.com/python/django/kubernetes-engine#set_up_cloud_sql
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudsql
spec:
  selector:
    matchLabels:
      app: cloudsql
  replicas: 1
  template:
    metadata:
      labels:
        app: cloudsql
    spec:
      containers:
      # [START proxy_container]
      - image: gcr.io/cloudsql-docker/gce-proxy:1.16
        name: cloudsql-proxy
        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                  "-instances=${INSTANCE_CONNECTION_NAME}=tcp:0.0.0.0:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-oauth-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
          - name: ssl-certs
            mountPath: /etc/ssl/certs
          - name: cloudsql
            mountPath: /cloudsql
        ports:
          - containerPort: 5432
            name: sql
      # [END proxy_container] 
      # [START volumes]
      volumes:
        - name: cloudsql-oauth-credentials
          secret:
            secretName: cloudsql-oauth-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir: {}
      # [END volumes]        

---
apiVersion: v1
kind: Service
metadata:
  name: cloudsql
  labels:
    app: cloudsql
spec:
  type: ClusterIP
  selector:
    app: cloudsql
  ports:
    - port: 5432
      name: sql
      targetPort: sql

---
# [START kubernetes_deployment]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peerlogic-api
  labels:
    app: peerlogic-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: peerlogic-api
  template:
    metadata:
      labels:
        app: peerlogic-api
    spec:
      containers:
      - name: peerlogic-api
        image: gcr.io/peerlogic-api-prod/peerlogic-api
        readinessProbe:
          httpGet:
            path: /admin/login/?next=/admin/core/client/
            port: 8080
        ports:
        - containerPort: 8080
      - name: peerlogic-celery-worker
        command: ["celery", "-A", "peerlogic", "worker", "-l", "INFO"]
        image: gcr.io/peerlogic-api-prod/peerlogic-api
      - name: peerlogic-celery-beat
        command: ["celery", "-A", "peerlogic", "beat", "-l", "INFO", "-S", "django_celery_beat.schedulers:DatabaseScheduler"]
        image: gcr.io/peerlogic-api-prod/peerlogic-api
---

# [START service]
# The peerlogic-api service provides a load-balancing proxy over the peerlogic-api app
# pods. By specifying the type as a 'LoadBalancer', Container Engine will
# create an external HTTP load balancer.
# For more information about Services see:
#   https://cloud.google.com/container-engine/docs/services/
# For more information about external HTTP load balancing see:
#   https://cloud.google.com/container-engine/docs/load-balancer
apiVersion: v1
kind: Service
metadata:
  name: peerlogic-api
  namespace: default
  labels:
    app: peerlogic-api
spec:
  type: NodePort
  selector:
    app: peerlogic-api
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
# [END service]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.allow-http:  "false"
    kubernetes.io/ingress.global-static-ip-name: peerlogic-api-prod
    networking.gke.io/managed-certificates: api-prod-peerlogic-tech
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: peerlogic-api
            port:
              number: 80
